force-app/main/default/objects/maps__AdvRouteVisitWindows__c/maps__AdvRouteVisitWindows__c.object-meta.xml
<CustomObject>
    <description>These are the different Advanced Route visit windows for a record</description>
    <label>Maps Advanced Route Visit Windows</label>
    <nameField>
        <label>Maps Advanced Route Visit Windows Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Route Visit Windows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>