force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__AlternateVisitWindowsMap__c.field-meta.xml
<CustomField>
    <fullName>maps__AlternateVisitWindowsMap__c</fullName>
    <description>This is a JSON map for the non default visit windows</description>
    <label>Alternate Visit Windows Map</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>