force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__Default__c.field-meta.xml
<CustomField>
    <fullName>maps__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field will determine if the saved record is a default</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>