force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__EndDate__c.field-meta.xml
<CustomField>
    <fullName>maps__EndDate__c</fullName>
    <description>The end date that this window is valid for</description>
    <inlineHelpText>(optional) If the Start Date is populated, then the End Date is required</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>