force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__FridayEnd1__c.field-meta.xml
<CustomField>
    <fullName>maps__FridayEnd1__c</fullName>
    <label>Friday End 1</label>
    <type>Time</type>
</CustomField>