force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__FridayEnd2__c.field-meta.xml
<CustomField>
    <fullName>maps__FridayEnd2__c</fullName>
    <label>Friday End 2</label>
    <type>Time</type>
</CustomField>