force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__FridayStart2__c.field-meta.xml
<CustomField>
    <fullName>maps__FridayStart2__c</fullName>
    <label>Friday Start 2</label>
    <type>Time</type>
</CustomField>