force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__IsTemporary__c.field-meta.xml
<CustomField>
    <fullName>maps__IsTemporary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Temporary</label>
    <type>Checkbox</type>
</CustomField>