force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__MondayEnd1__c.field-meta.xml
<CustomField>
    <fullName>maps__MondayEnd1__c</fullName>
    <label>Monday End 1</label>
    <type>Time</type>
</CustomField>