force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__MondayEnd2__c.field-meta.xml
<CustomField>
    <fullName>maps__MondayEnd2__c</fullName>
    <label>Monday End 2</label>
    <type>Time</type>
</CustomField>