force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__MondayStart1__c.field-meta.xml
<CustomField>
    <fullName>maps__MondayStart1__c</fullName>
    <label>Monday Start 1</label>
    <type>Time</type>
</CustomField>