force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__MondayStart2__c.field-meta.xml
<CustomField>
    <fullName>maps__MondayStart2__c</fullName>
    <label>Monday Start 2</label>
    <type>Time</type>
</CustomField>