force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__RepeatsAs__c.field-meta.xml
<CustomField>
    <fullName>maps__RepeatsAs__c</fullName>
    <description>This is the frequency at which the visit will repeat</description>
    <label>Repeats As</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Times Through Month</fullName>
            </value>
            <value>
                <fullName>Single Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>