force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__SaturdayEnd1__c.field-meta.xml
<CustomField>
    <fullName>maps__SaturdayEnd1__c</fullName>
    <label>Saturday End 1</label>
    <type>Time</type>
</CustomField>