force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__SaturdayEnd2__c.field-meta.xml
<CustomField>
    <fullName>maps__SaturdayEnd2__c</fullName>
    <label>Saturday End 2</label>
    <type>Time</type>
</CustomField>