force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__SaturdayStart1__c.field-meta.xml
<CustomField>
    <fullName>maps__SaturdayStart1__c</fullName>
    <label>Saturday Start 1</label>
    <type>Time</type>
</CustomField>