force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__SaturdayStart2__c.field-meta.xml
<CustomField>
    <fullName>maps__SaturdayStart2__c</fullName>
    <label>Saturday Start 2</label>
    <type>Time</type>
</CustomField>