force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__Shared__c.field-meta.xml
<CustomField>
    <fullName>maps__Shared__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field will determine if the visit window is allowed to be shared between records or is related to a specific record</description>
    <label>Shared</label>
    <type>Checkbox</type>
</CustomField>