force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__StartDate__c.field-meta.xml
<CustomField>
    <fullName>maps__StartDate__c</fullName>
    <description>The start date that this window is valid for</description>
    <inlineHelpText>(optional)</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>