force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__SundayEnd2__c.field-meta.xml
<CustomField>
    <fullName>maps__SundayEnd2__c</fullName>
    <label>Sunday End 2</label>
    <type>Time</type>
</CustomField>