force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__SundayStart1__c.field-meta.xml
<CustomField>
    <fullName>maps__SundayStart1__c</fullName>
    <label>Sunday Start 1</label>
    <type>Time</type>
</CustomField>