force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__SundayStart2__c.field-meta.xml
<CustomField>
    <fullName>maps__SundayStart2__c</fullName>
    <label>Sunday Start 2</label>
    <type>Time</type>
</CustomField>