force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__ThursdayEnd1__c.field-meta.xml
<CustomField>
    <fullName>maps__ThursdayEnd1__c</fullName>
    <label>Thursday End 1</label>
    <type>Time</type>
</CustomField>