force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__ThursdayStart2__c.field-meta.xml
<CustomField>
    <fullName>maps__ThursdayStart2__c</fullName>
    <label>Thursday Start 2</label>
    <type>Time</type>
</CustomField>