force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__TimesThroughMonth__c.field-meta.xml
<CustomField>
    <fullName>maps__TimesThroughMonth__c</fullName>
    <label>Times Through Month</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st Time Through</fullName>
            </value>
            <value>
                <fullName>2nd Time Through</fullName>
            </value>
            <value>
                <fullName>3rd Time Through</fullName>
            </value>
            <value>
                <fullName>4th Time Through</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>