force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__TimeWindowEnd1__c.field-meta.xml
<CustomField>
    <fullName>maps__TimeWindowEnd1__c</fullName>
    <description>end time of first time window option</description>
    <label>Time Window End 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>maps__AdvRouteTimeWindows</valueSetName>
    </valueSet>
</CustomField>