force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__TimeWindowEnd2__c.field-meta.xml
<CustomField>
    <fullName>maps__TimeWindowEnd2__c</fullName>
    <description>end time of second time window option</description>
    <inlineHelpText>(optional) Time Window 2 cannot overlap Time Window 1</inlineHelpText>
    <label>Time Window End 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>maps__AdvRouteTimeWindows</valueSetName>
    </valueSet>
</CustomField>