force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__TuesdayEnd2__c.field-meta.xml
<CustomField>
    <fullName>maps__TuesdayEnd2__c</fullName>
    <label>Tuesday End 2</label>
    <type>Time</type>
</CustomField>