force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__TuesdayStart2__c.field-meta.xml
<CustomField>
    <fullName>maps__TuesdayStart2__c</fullName>
    <label>Tuesday Start 2</label>
    <type>Time</type>
</CustomField>