force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__VisitWindow__c.field-meta.xml
<CustomField>
    <fullName>maps__VisitWindow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit Window</label>
    <referenceTo>maps__AdvRouteVisitWindows__c</referenceTo>
    <relationshipLabel>Maps Advanced Route Visit Windows</relationshipLabel>
    <relationshipName>MapsAdvancedRouteVisitWindows</relationshipName>
    <type>Lookup</type>
</CustomField>