force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__VW_Contact__c.field-meta.xml
<CustomField>
    <fullName>maps__VW_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the default lookup to associate the Contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>AdvRouteVisitWindows</relationshipName>
    <type>Lookup</type>
</CustomField>