force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__VW_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>maps__VW_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the default lookup to associate the Opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>AdvRouteVisitWindows</relationshipName>
    <type>Lookup</type>
</CustomField>