force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__WednesdayEnd1__c.field-meta.xml
<CustomField>
    <fullName>maps__WednesdayEnd1__c</fullName>
    <label>Wednesday End 1</label>
    <type>Time</type>
</CustomField>