force-app/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__WednesdayStart2__c.field-meta.xml
<CustomField>
    <fullName>maps__WednesdayStart2__c</fullName>
    <label>Wednesday Start 2</label>
    <type>Time</type>
</CustomField>